[gd_scene load_steps=13 format=3 uid="uid://pl2x1nqikijo"]

[ext_resource type="Script" path="res://liftable.gd" id="1_4mo6d"]
[ext_resource type="PhysicsMaterial" uid="uid://b7jkmtmvrye0q" path="res://liftable.tres" id="1_jclen"]
[ext_resource type="Texture2D" uid="uid://m56eweko1tr4" path="res://Textures/Kubo/hut.png" id="3_4mq3k"]
[ext_resource type="Gradient" uid="uid://bj0rwdf55nrkx" path="res://smoke.tres" id="3_7f1yw"]
[ext_resource type="Gradient" uid="uid://rshy75xx3vhw" path="res://burn.tres" id="3_n6sx1"]
[ext_resource type="Texture2D" uid="uid://cht42a28lqpy6" path="res://Textures/Particles/fire.png" id="5_31ycx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4fnj8"]
size = Vector2(28, 12.5)

[sub_resource type="Curve" id="Curve_a8q1g"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.736641, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.381132), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_1h76q"]
offsets = PackedFloat32Array(0, 0.285714, 0.660714, 1)
colors = PackedColorArray(0.28, 0.28, 0.28, 1, 0.360244, 0.360244, 0.360244, 1, 0.15, 0.15, 0.15, 1, 0.21, 0.21, 0.21, 0)

[sub_resource type="Curve" id="Curve_aoqy5"]
_data = [Vector2(0, 0.486792), 0.0, 0.0, 0, 0, Vector2(0.187023, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.441509), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_8nusi"]
offsets = PackedFloat32Array(0, 0.723214, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.955357, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_ago7i"]
min_value = -1.0
_data = [Vector2(0, -0.992453), 0.0, 0.0, 0, 0, Vector2(1, -0.328302), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Liftable" type="RigidBody2D" node_paths=PackedStringArray("top", "highlight", "burnHighlight", "smokeParticles", "douseParticles", "deathParticles", "splash")]
z_index = -3
collision_layer = 8655
collision_mask = 3
physics_material_override = ExtResource("1_jclen")
can_sleep = false
lock_rotation = true
script = ExtResource("1_4mo6d")
top = NodePath("Top")
highlight = NodePath("Highlight")
burnHighlight = NodePath("Burn")
durability = 15.0
smokeParticles = NodePath("smokeParticles")
douseParticles = NodePath("douseParticles")
deathParticles = NodePath("deathParticles")
putOut = ExtResource("3_n6sx1")
splash = NodePath("Splash")
volume = 1.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.5, -7.5)
texture = ExtResource("3_4mq3k")
hframes = 17

[node name="Burn" type="Sprite2D" parent="."]
position = Vector2(0.5, -7.5)

[node name="Highlight" type="Sprite2D" parent="."]
position = Vector2(0.5, -7.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -3.25)
shape = SubResource("RectangleShape2D_4fnj8")

[node name="Top" type="Node2D" parent="."]

[node name="burnParticles1" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.7
texture = ExtResource("5_31ycx")
emission_shape = 3
emission_rect_extents = Vector2(20, 3)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -120)
initial_velocity_max = 30.0
scale_amount_min = 0.1
scale_amount_curve = SubResource("Curve_a8q1g")
color_ramp = ExtResource("3_n6sx1")

[node name="burnParticles2" type="CPUParticles2D" parent="."]
z_index = -5
emitting = false
amount = 30
lifetime = 0.7
texture = ExtResource("5_31ycx")
emission_shape = 3
emission_rect_extents = Vector2(20, 3)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -120)
initial_velocity_max = 30.0
scale_amount_min = 0.1
scale_amount_curve = SubResource("Curve_a8q1g")
color_ramp = ExtResource("3_n6sx1")

[node name="smokeParticles" type="CPUParticles2D" parent="."]
z_index = -5
emitting = false
amount = 50
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(20, 3)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -40)
initial_velocity_max = 10.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
scale_amount_max = 14.0
scale_amount_curve = SubResource("Curve_a8q1g")
color_ramp = ExtResource("3_7f1yw")

[node name="douseParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(20, 3)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -40)
initial_velocity_min = 30.0
initial_velocity_max = 40.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_a8q1g")
color_ramp = ExtResource("3_7f1yw")

[node name="deathParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 50
lifetime = 1.5
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(20, 3)
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -80)
initial_velocity_max = 40.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
damping_min = 10.0
damping_max = 20.0
scale_amount_max = 15.0
scale_amount_curve = SubResource("Curve_a8q1g")
color_ramp = SubResource("Gradient_1h76q")

[node name="Splash" type="CPUParticles2D" parent="."]
position = Vector2(0, 3)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_31ycx")
emission_shape = 3
emission_rect_extents = Vector2(16, 1)
direction = Vector2(0, -1)
spread = 53.51
initial_velocity_min = 85.55
initial_velocity_max = 100.0
scale_amount_min = 0.1
scale_amount_curve = SubResource("Curve_aoqy5")
color = Color(0, 0.164706, 1, 1)
color_ramp = SubResource("Gradient_8nusi")
hue_variation_max = 0.1
hue_variation_curve = SubResource("Curve_ago7i")
